# kryon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  package-check.yml
docs/: AUDIT_SCOPE.md  CRYPTOANALYSIS.md  FUZZING.md  LAUNCH.md  NATIVE_PARITY.md  PUBLISHING.md  PYPI_GITHUB_ACTIONS.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SPEC.md  VECTORS.md
kryon/: __init__.py  analysis.py  attacks.py  cli.py  core.py  corpus.py  fileio.py  kats.py  reduced.py  security.py  toy_model.py
native/c/: Makefile  README.md  kryon_corpus.c  kryon_kat.c  kryon_native.c  kryon_native.h
native/rust/: Cargo.toml  README.md
native/rust/examples/: kryon_bench.rs  kryon_corpus.rs  kryon_kat.rs
native/rust/fuzz/: README.md
native/rust/fuzz/fuzz_targets/: kryon_streaming.rs
native/rust/src/: lib.rs
scripts/: avalanche.py  benchmark.py  bit_frequency.py  c_corpus_parity.py  c_kat.py  collision_toy.py  corpus_diff_runner.py  corpus_matrix.py  differential_clustering.py  differential_trail.py  final_audit.py  fuzz_smoke.py  generate_vectors.py  long_fuzz.py  native_kat.py  parity_corpus_runner.py  parity_runner.py  reduced_attack_automation.py  reduced_sweep.py  release_check.py  rust_benchmark.py  toy_smt_model.py
tests/: test_attacks_v08.py  test_ci_v06.py  test_corpus_v07.py  test_fileio_cli_v10.py  test_native_prod.py  test_properties.py  test_reduced.py  test_security_v10.py  test_streaming.py  test_vectors.py
