[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kryon"
version = "1.0.0"
description = "A modern irreversible hash toolkit for fast file integrity, manifests, and keyed digests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kryon Project" }]
license = "MIT"
keywords = ["hash", "cryptography", "checksum", "integrity", "streaming", "manifest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Development Status :: 4 - Beta",
]

[project.scripts]
kryon = "kryon.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["kryon"]
include-package-data = true

[tool.setuptools.package-data]
kryon = ["py.typed"]
